# field-ai-bridge-oakley

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build.yml  build_livekit-bridge.yml  build_nats-bridge.yml  build_webrtc-bridge.yml  drawio-export.yml
NATS_bridge/: README.md  compose.yaml  requirements.txt
NATS_bridge/nats_bridge/: compose.yaml  package.xml
NATS_bridge/nats_bridge/src/nats_bridge/: __init__.py  nats_bridge.py
images/: network.drawio
images/export/: README.md
livekit_bridge/: .hadolint.yaml  README.md  mint_android_token.sh  run_livekit_room.sh  run_livekit_viewer.sh  stop_livekit_room.sh  stop_livekit_viewer.sh
livekit_bridge/livekit_room/: Dockerfile  livekit.yaml
livekit_bridge/ros1_livekit_bridge/: Dockerfile  config.yaml  docker-entrypoint.sh  livekit_bridge.py  main.py  pyproject.toml
livekit_bridge/ros1_publisher/: Dockerfile  config.yaml  docker-entrypoint.sh  image_publisher.py  main.py  pyproject.toml
livekit_bridge/streamer_livekit/: .dockerignore  Dockerfile  main.py  pyproject.toml
livekit_bridge/viewer_livekit/: Dockerfile  main.py  requirements.txt
nats-server/: README.md  compose.yaml
nats_bridge/: CMakeLists.txt
nats_bridge/launch/: nats_bridge.launch
webRTC_bridge/: Dockerfile  README.md  compose.yaml  index.html
webRTC_bridge/old/: requirements.txt  ros1-webrtc_bridge.py
webRTC_bridge/old/scripts/: nats_bridge_node.py
webRTC_bridge/old/src/nats_bridge/: __init__.py
webRTC_bridge/webrtc_launch/: CMakeLists.txt  package.xml
webRTC_bridge/webrtc_launch/launch/: webrtc.launch
