<?xml version="1.0"?>
<package format="2">
  <name>nats_bridge</name>
  <version>0.0.0</version>
  <description>The nats_bridge package</description>

  <maintainer email="matta@caltech.edu">matt</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Python NATS client library used by nats_bridge node -->
  <exec_depend>python3-nats-py</exec_depend>

</package>
