<?xml version="1.0"?>
<package format="2">
  <name>webrtc_launch</name>
  <version>0.0.0</version>
  <description>The webrtc_launch package</description>

  <maintainer email="matta@caltech.edu">matt</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>webrtc_ros</depend>

</package>
